ring: Fix thawing combining accents over a double-wide character

https://bugzilla.gnome.org/show_bug.cgi?id=795192
(cherry picked from commit 441ea0ed2c06bfe716c390c825031024eee065ee)